# biocrypticbank

./: .gitignore  README.md  nearchainbank.sln
docs/architecture/diagrams/: nearchainbank_architecture.puml
docs/blockchain/: aurora.puml  avax.puml  near-py.puml  near-rs.puml
docs/off-chain/: backend.puml
services/backend/BioCrypticBank.Backend/: BioCrypticBank.Backend.csproj  BioCrypticBank.Backend.http  Program.cs  appsettings.json
services/backend/BioCrypticBank.Backend/Controllers/: BlockchainController.cs  ValuesController.cs
services/backend/BioCrypticBank.Backend/Models/: BlockchainModels.cs  DidModels.cs
services/blockchain/: build-test.md
services/blockchain/aurora/: .gitignore  build.sh  hardhat.config.js  package.json
services/blockchain/aurora/contracts/: AaveIntegration.sol  RWAProxy.sol  (+2 more)
services/blockchain/avax/: .gitignore  build.sh  hardhat.config.js  package.json
services/blockchain/ccip/: cross-chain-token-bridge.md  package.json
services/blockchain/near-rs/: Cargo.toml  README.md  build.sh  deploy.sh  init.sh
services/blockchain/near-rs/account-recovery/: Cargo.toml
services/blockchain/near-rs/account-recovery/src/: lib.rs
services/blockchain/near-rs/core-banking/: Cargo.toml
services/blockchain/near-rs/core-banking/src/: lib.rs
services/blockchain/near-rs/did-management/: Cargo.toml
services/blockchain/near-rs/did-management/src/: lib.rs
services/blockchain/near-rs/res/: bcb_acc.wasm  bcb_core.wasm  bcb_did.wasm
services/client/biocrypticbank_mobile/: .gitignore  README.md  pubspec.yaml
services/client/biocrypticbank_web/: package.json
services/client/ncb-web/: .gitignore  package.json
(+27 files in other folders)
