# services/blockchain/near-rs/account-recovery/Cargo.toml
[package]
name = "bcb-acc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.14.0"
borsh = "1.0.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
incremental = false
overflow-checks = true
