# services/blockchain/near-rs/did-management/Cargo.toml
[package]
name = "near-did-management"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.14.0" # Updated to 5.14.0
borsh = "1.0.0"     # Updated to 1.0.0 for compatibility with near-sdk 5.x

[profile.release]
codegen-units = 1 # Optimize for size
opt-level = "z"   # Optimize for size
lto = true        # Link-time optimization
debug = false     # No debug information
panic = "abort"   # Abort on panic (smaller binary)
incremental = false
overflow-checks = true
